# tgwUltima

./: .gitignore  README.md
gimp-plugin-u8/: CHANGELOG.md  u8shp.c  (+2 more)
titan-ultima/: .gitignore  CHANGELOG.md  DEV_INSTALL.md  FONTS_CREDITS.md  LICENSE  PUBLISHING_HOWTO.md  README.md  THIRD_PARTY_NOTICES.md  cli_reference.md  hatch_build.py  pyproject.toml  titan.toml.example
titan-ultima/scripts/: verify_package.py
titan-ultima/src/titan/: __init__.py  __main__.py  _config.py  _version.py  cli.py  credits.py  flex.py  map.py  music.py  palette.py  save.py  shape.py  sound.py  typeflag.py  xformpal.py
titan-ultima/src/titan/adaptive_resample/: __init__.py
titan-ultima/src/titan/adaptive_resample/resize_right/: interp_methods.py  resize_right2d_numpy.py
titan-ultima/src/titan/dialogue/: __init__.py  cli.py
titan-ultima/src/titan/dialogue/pipeline/: __init__.py  build_data.py  extract_ast.py  extract_books.py  extract_library.py  lint_json.py  run_fold.py
titan-ultima/src/titan/dialogue/websrc/: .gitignore  READMEd.md  build_data.py  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
titan-ultima/src/titan/fonts/: __init__.py  encoder.py  exult_cfg.py  palette.py  presets.py  renderer.py  wizard.py
titan-ultima/src/titan/u6/: __init__.py  actor.py  book.py  cli.py  converse.py  flags.py  font.py  gamestate.py  lib.py  look.py  lzw.py  map.py  object.py  palette.py  schedule.py  tile.py  tileflag.py
titan-ultima/src/titan/u7/: __init__.py  cli.py  container.py  eggs.py  flex.py  ireg.py  map.py  monster.py  music.py  names.py  palette.py  palette_cycle.py  palette_semantics.py  palette_transform.py  save.py  shape.py  shape_animation.py  shape_cycle_scan.py  shape_extra.py  shapeinfo.py  sound.py  translucency.py  typeflag.py  usecode.py  wihh.py  world.py  zones.py
titan-ultima/src/titan/u8/: __init__.py  cli.py  credits.py  map.py  save.py  shape.py  sound.py  typeflag.py
titan-ultima/tests/: _fixtures.py  test_u6_actor.py  test_u6_animdata.py  test_u6_book.py  test_u6_cli.py  test_u6_converse.py  test_u6_flags.py  test_u6_font.py  test_u6_gamestate.py  test_u6_lib.py  test_u6_look.py  test_u6_lzw.py  test_u6_map.py  test_u6_object.py  test_u6_palette.py  test_u6_schedule.py  test_u6_tile.py  test_u6_tileflag.py  test_u7_ireg.py  test_u7_map_ireg.py  test_u7_palette.py  test_u7_palette_cycle.py  test_u7_shape_animate_cli.py  test_u7_shape_animation.py  test_u7_shape_cycle_scan.py  test_u7_shape_export_cli.py  test_u7_shape_extra.py  test_u7_shape_transparency.py  test_u7_translucency.py  test_u7_typeflag.py
(+633 files in other folders)
